--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,13 @@
     "keywords": [
         "phpeims",
         "php",
+        "eims",
         "cms"
     ],
     "license": "Apache-2.0",
     "homepage": "https://www.phpeims.com/",
     "support": {
         "issues": "https://github.com/phpeims/phpeims/issues?state=open",
-        "forum": "https://www.phpeims.com/forum/",
-        "wiki": "https://www.phpeims.com/wiki/",
         "source": "https://github.com/phpeims/phpeims"
     },
     "require": {
